@@ -25,7 +25,7 @@ class ExceededMaximumWorkingHoursPerDayCalculatorTest {
 
         @Test
         void calculate_whenDataListEmpty_thenNoWarningsCreated() {
-            assertTrue(calculator.calculate(Collections.emptyList()).isEmpty());
+            assertTrue(calculator.calculate(List.of()).isEmpty());
         }
 
         @Test
